service1.yml
apiVersion: v1
kind: Service
metadata:
  name: reactservice
spec:
  type: LoadBalancer
  selector:
    app: reactpod
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30001
