service2.yml
apiVersion: v1
kind: Service
metadata:
  name: nodeservice
spec:
  type: ClusterIP
  selector:
    app: nodepod
  ports:
  - port: 8000
    targetPort: 8000
