alb-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "dockercomposek8taskingress"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: dockercomposek8task
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "reactservice"
              servicePort: 80
